# SQLiteBuildAutomation

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.txt  Vagrantfile  build_sqlite.yml  install_docker.yml  local_inventory.yml
project_conan/: CMakeLists.txt  conanfile.py  main.cpp
